fix: example image alignment and spacing

--- a/website/index.css
+++ b/website/index.css
@@ -173,6 +173,7 @@ article h3 {
 .example {
 	background: var(--cool-1300);
     display: flex;
+	flex-direction: row;
     padding: 1rem;
 	margin: 1rem 0;
     align-items: center;
@@ -180,18 +181,7 @@ article h3 {
 	border-radius: 6px;
 	color: var(--green-300);
 	word-break: break-all;
-}
-
-.example .highlight-type {
-	color: var(--example-type-highlight-color)
-}
-
-.example .highlight-id {
-	color: var(--example-id-highlight-color)
-}
-
-.example img {
-    align-self: flex-end;
+	gap: 1rem;
 }
 
 .heads img {
